--- a/style.css
+++ b/style.css
@@ -1,12 +1,13 @@
 body {
     font-family: 'Arial', sans-serif;
     margin: 20px;
-    background-color: #f5f5f5;
+    background-color: #272727;
 }
 
 /* Job Form */
 #jobForm {
-    background-color: #fff;
+    background-color: #474747;
+    color: rgb(231, 229, 229);
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -14,10 +15,12 @@ body {
 
 #jobForm input[type="text"],
 #jobForm input[type="submit"] {
-    width: 100%;
+    background-color: rgb(128, 127, 127);
+    color: white;
+    width: 97%;
     padding: 10px;
     margin-bottom: 10px;
-    border: 1px solid #ddd;
+    border: 1px solid #b6b4b4;
     border-radius: 3px;
 }
 
@@ -35,7 +38,8 @@ body {
 
 /* Job Posts Display Area */
 #jobPosts .job-posting {
-    background-color: #fff;
+    background-color: #7a7979;
+    color: white;
     padding: 20px;
     margin: 20px 0;
     border-radius: 5px;
@@ -78,6 +82,7 @@ body {
 }
 
 .resume-section textarea, .coverletter-section textarea {
+    background-color: rgb(186, 185, 185);
     width: 100%;
     height: 90%; /* to occupy most of the space in its section */
     padding: 10px;
