--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ textarea::placeholder {
 }
 
 
-#jobPosts .job-posting button.appied {
+#jobPosts .job-posting button.applied {
     background-color: #002f61;
     color: #fff;
 }
