Added 2 download capabilities
I added 2 btns to the custom resume and cover letter sections.
the download as txt btn will download the text value of either section as a txt file, naming it jobtitle_company-name_custom(resume or cover letter).txt
the download as pdf btn will download the html textarea either section as a pdf file, naming it jobtitle_company-name_custom(resume or cover letter).txt

--- a/style.css
+++ b/style.css
@@ -99,6 +99,7 @@ textarea::placeholder {
     border: 1px solid #ddd;
     border-radius: 3px;
     resize: none; /* prevent manual resizing */
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .save-changes {
